LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/GM_EXP_HD_MAST__x.object-meta.xml
<CustomObject>
    <description>GM_EXP_HD_MAST</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_EXP_HD_MAST</externalName>
    <label>GM_EXP_HD_MAST</label>
    <pluralLabel>GM_EXP_HD_MAST</pluralLabel>
</CustomObject>