LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/ACC_CODE__c.field-meta.xml
<CustomField>
    <fullName>ACC_CODE__c</fullName>
    <description>ACC_CODE</description>
    <externalDeveloperName>ACC_CODE</externalDeveloperName>
    <label>ACC_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>