LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/ACTIVE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_FLAG__c</fullName>
    <description>ACTIVE_FLAG</description>
    <externalDeveloperName>ACTIVE_FLAG</externalDeveloperName>
    <label>ACTIVE_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>