LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/CHARGEABLE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CHARGEABLE_FLAG__c</fullName>
    <description>CHARGEABLE_FLAG</description>
    <externalDeveloperName>CHARGEABLE_FLAG</externalDeveloperName>
    <label>CHARGEABLE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>