LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/CHRG_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CHRG_TYPE__c</fullName>
    <description>CHRG_TYPE</description>
    <externalDeveloperName>CHRG_TYPE</externalDeveloperName>
    <label>CHRG_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>