LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>DESCRIPTION</description>
    <externalDeveloperName>DESCRIPTION</externalDeveloperName>
    <label>DESCRIPTION</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>