LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/EXP_CODE__c.field-meta.xml
<CustomField>
    <fullName>EXP_CODE__c</fullName>
    <description>EXP_CODE</description>
    <externalDeveloperName>EXP_CODE</externalDeveloperName>
    <label>EXP_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>