LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/EXP_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EXP_FLAG__c</fullName>
    <description>EXP_FLAG</description>
    <externalDeveloperName>EXP_FLAG</externalDeveloperName>
    <label>EXP_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>