LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/EXP_MID__c.field-meta.xml
<CustomField>
    <fullName>EXP_MID__c</fullName>
    <description>EXP_MID</description>
    <externalDeveloperName>EXP_MID</externalDeveloperName>
    <label>EXP_MID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>