LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/EXP_NAME__c.field-meta.xml
<CustomField>
    <fullName>EXP_NAME__c</fullName>
    <description>EXP_NAME</description>
    <externalDeveloperName>EXP_NAME</externalDeveloperName>
    <label>EXP_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>