LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/EXP_PARANT__c.field-meta.xml
<CustomField>
    <fullName>EXP_PARANT__c</fullName>
    <description>EXP_PARANT</description>
    <externalDeveloperName>EXP_PARANT</externalDeveloperName>
    <label>EXP_PARANT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>