LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/FBT_ACC_CODE__c.field-meta.xml
<CustomField>
    <fullName>FBT_ACC_CODE__c</fullName>
    <description>FBT_ACC_CODE</description>
    <externalDeveloperName>FBT_ACC_CODE</externalDeveloperName>
    <label>FBT_ACC_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>