LinKreta_POC_Repository/force-app/main/default/objects/GM_EXP_HD_MAST__x/fields/USER_CODE_UPD__c.field-meta.xml
<CustomField>
    <fullName>USER_CODE_UPD__c</fullName>
    <description>USER_CODE_UPD</description>
    <externalDeveloperName>USER_CODE_UPD</externalDeveloperName>
    <label>USER_CODE_UPD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>